[package]
name = "bulletproofs_examples"
version = "0.1.1"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["u64_backend", "serde", "alloc"] }
subtle = { package = "subtle-ng", version = "2.4", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features =["alloc"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
clear_on_drop = { version = "0.2", default-features = false, features = ["nightly"] }
failure = "0.1"
bulletproofs = { version = "4.0.0", features = ["avx2_backend", "yoloproofs"]}


[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.2"
spock = "0.1.0"
